assets/css/style.css
:root {
    --color-background: rgb(215, 237, 236);
    --color-header: rgb(255, 255, 255);
    --color-modal: rgb(255, 255, 255);
    --color-one: rgb(242, 159, 160);
    --color-two: rgb(107, 201, 234);
    --color-three: rgb(242, 221, 129);
    --color-four: rgb(101, 188, 183);
    --color-black: rgb(43, 47, 47);
    --transition-hover: all ease-in-out 0.3s;
    --transition-theme: color 1s ease, background-color 1s ease;
    --border-wavy: 255px 15px 225px 15px/15px 225px 15px 255px;
    --font-headings: "Bungee", sans-serif;
    --font-secondary: "Roboto", sans-serif;
}

#dark {
    --color-background: rgb(18, 18, 18);
    --color-header: rgb(18, 18, 18);
    --color-modal: rgb(18, 18, 18);
    --color-black: rgb(208, 208, 208);
    --color-one: rgb(157, 91, 92);
    --color-two: rgb(55, 122, 147);
    --color-three: rgb(150, 96, 26);
    --color-four: rgb(51, 113, 109);
}

html {
    box-sizing: border-box;
    scroll-behavior: smooth;
    text-align: center;
    font-family: var(--font-secondary);
    color: var(--color-black);
    background-color: var(--color-background);
}

*,
*::before,
*::after {
    box-sizing: inherit;
    margin: 0;
    padding: 0;
}

body,
header,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
    margin: 0;
}

input,
button,
textarea,
select,
nav a {
    font: inherit;
    color: var(--color-black);
    text-decoration: none;
}

header, footer {
    background-color: var(--color-header);
    color: var(--color-black);
    transition: var(--transition-theme);
    padding: 0.5rem 0;
}

header {
    border-bottom: var(--color-black) solid 0.3rem;
    margin-bottom: 2.5rem;
    padding: 0.5rem 1.2rem;
}

.header-container {
    display: flex;
    justify-content: space-between;
    margin: 0 auto;
    max-width: 600px;
}

footer {
    border-top: var(--color-black) solid 0.3rem;
    position: fixed;
    bottom: 0;
    width: 100%;
}

nav {
    display: flex;
    align-items: center;
}

nav ul li {
    display: inline;
    list-style: none;
    padding: 0 0.1rem;
    color: var(--color-black);
}

.visually-hidden {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
  }

/* Disabled nav items while game in progress */
.nav-item-disabled {
    cursor: not-allowed;
    filter: grayscale(100%);
    opacity: 0.6;
}

h1 {
    font-family: var(--font-headings);
    font-size: 2rem;
    cursor: default;
}

p {
    font-size: 0.9rem
}

a {
    text-decoration: none;
    color: inherit;
}

a:hover {
    color: var(--color-two);
}

hr {
    border: 1px dashed var(--color-black);
}

#timer {
    padding: 1rem 0;
    margin: 1rem auto;
}

label[for=timer] {
    display: none;
}

#last-answer-display,
.btn-stats {
    font-size: 1rem;
    background-color: var(--color-header);
    color: var(--color-black);
    padding: 1rem;
    margin: 1rem;
    border-radius: var(--border-wavy);
    border: var(--color-black) solid 5px;
}

#scoreboard {
    font-size: 0.7rem;
    border: 3px solid var(--color-black);
    table-layout: fixed;
    padding: 0.2rem;
    text-align: center;
    width: 100%;
    border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
}

#scoreboard th,
#scoreboard td {
    padding: 0.3rem;
    width: 30%;
}

#stats-btns {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.btn-stats {
    transition: var(--transition-hover);
}

#btn-share svg {
    margin: 0 0.5rem;
}

#btn-share:hover, #btn-share:focus {
    background-color: var(--color-two);
}

#btn-clear-stats:hover, #btn-clear-stats:focus {
    background-color: var(--color-one);
}

.btn-game {
    font-family: var(--font-headings);
    color: var(--color-black);
    height: 9rem;
    width: 9rem;
    font-size: 2rem;
    border: var(--color-black) solid 0.3rem;
    border-radius: var(--border-wavy);
    margin: 3px;
    transition: all ease-in-out 0.1s;
}

.btn-game:hover, .btn-game:focus {
    border: var(--color-black) dashed 0.4rem;
}

.btn-game[data-game-btn="number"] {
    font-size: 4rem;
    background-color: var(--color-one);
}

.btn-game[data-game-btn="fizz"] {
    background-color: var(--color-two);
}

.btn-game[data-game-btn="buzz"] {
    background-color: var(--color-three);
}

.btn-game[data-game-btn="fizzbuzz"] {
    background-color: var(--color-four);
}

/* Modal Styles */

/* The Modal (background) */
.modal {
    display: none;
    position: fixed;
    overflow: hidden;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.6);
    transition: var(--transition-theme);
}

/* Modal Content/Box */
.modal-content {
    color: var(--color-black);
    background-color: var(--color-modal);
    margin: 15% auto;
    padding: 1.2rem;
    text-align: left;
    border-radius: var(--border-wavy);
    border: var(--color-black) solid 5px;
    width: 80%;
    max-width: 500px;
    transition: var(--transition-theme);
}

.modal-content h2 {
    padding-bottom: 1rem;
    font-family: var(--font-headings);
}

.modal-content hr {
    margin: 1rem 0;
}

/* Preferences Modal */
.prefs-text {
    font-size: smaller;
}

.prefs-label {
    display: inline-flex;
    align-items: center;
    margin: 0.3rem 0;
}

.prefs-label .prefs-toggle {
    position: relative;
    cursor: pointer;
    padding-right: 0.8rem;
}

.prefs-label [type=checkbox] {
    position: absolute;
    opacity: 0;
    pointer-events: none;
}

/* Default States */

.prefs-label .prefs-toggle::before,
.prefs-label .prefs-toggle::after {
    content: '';
    display: block;
    margin: 0 0.2;
    transition: all 100ms cubic-bezier(0.4, 0.0, 0.2, 1);
    background: rgb(208, 208, 208);
}

.prefs-label .prefs-toggle::before {
    height: 1.3em;
    width: 3em;
    border-radius: 0.65em;
    opacity: 0.6;
}

.prefs-label .prefs-toggle::after {
    position: absolute;
    top: 50%;
    transform: translate(0, -50%);
    height: 1.7em;
    width: 1.7em;
    border-radius: 50%;
    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2), 0 0 2px rgba(0, 0, 0, 0.4);
}

.prefs-label [type=checkbox]:focus+.prefs-toggle {
    outline: var(--color-two) solid 1px;
}

.prefs-label [type=checkbox]:checked+.prefs-toggle::before,
.prefs-label [type=checkbox]:checked+.prefs-toggle::after {
    background: var(--color-four);
}

.prefs-label [type=checkbox]:checked+.prefs-toggle::after {
    transform: translate(calc(3em - 100%), -50%);
}

/* Modal Close Button */
.close {
    color: #aaa;
    float: right;
    font-size: 3rem;
    font-weight: bold;
    transition: var(--transition-hover);
    background-color: inherit;
    border: none;
}

.close:hover,
.close:focus {
    color: var(--color-black);
    text-decoration: none;
    cursor: pointer;
}

#help-controls {
    list-style: none;
    text-align: left;
    padding-right: 3rem;
}

@media screen and (min-width: 425px) {
    p {
        font-size: 1rem;
    }

    #scoreboard {
        font-size: 1rem;
    }
}

/* Make game buttons slightly smaller on large displays for easier clicking */
@media screen and (min-width: 1024px) {
    .btn-game {
        height: 8rem;
        width: 8rem;
    }
}

